[package]
name = "p2witter"
version = "0.1.0"
edition = "2024"
license-file = "LICENSE"

[lib]
name = "p2witter"
path = "src/lib.rs"

[dependencies]
crossterm = "0.29.0"
ring = "0.17.14"
sled = "0.34.7"
toml = "0.9.8"
unicode-width = "0.2.2"
chrono = { version = "0.4", default-features = true }
serde = { version = "1.0.228", features = ["derive"] }
postcard = { version = "1.1.3", features = ["alloc"] }

[profile.release]
lto = true
opt-level = "s"
# コード生成をマルチスレッドで行わないようにする設定を消す
# codegen-units = 1
panic = "abort"
strip = "symbols"
